--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <!--<start-class>ru.neoflex.nfcore.base.BaseApplication</start-class>-->
+        <start-class>ru.neoflex.nfcore.base.BaseApplication</start-class>
         <emf-version>2.15.0</emf-version>
         <xtext-version>2.18.0</xtext-version>
         <ecore-xtext-version>1.4.0</ecore-xtext-version>
@@ -48,9 +48,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <layout>ZIP</layout>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
